--- a/luffy-css.css
+++ b/luffy-css.css
@@ -2,6 +2,10 @@ html, body {
     width: auto !important;
     overflow-x: hidden !important;
     font-family: Arial;
+    margin: 0%;
+    padding: 0%;
+    
+
   }
   
 
@@ -10,6 +14,7 @@ html, body {
   
   .fluid-container {
      background-color:#ffe0b2;
+     height:fit-content;
   }
   
   blockquote {
@@ -81,7 +86,7 @@ h1{
     padding: 20px;
     background: var(--main-color);
     text-align: center;
-    color: #201f1f;
+    color: #201f1f; 
     background-color: #847152;
   }
 
