--- a/luffy-css.css
+++ b/luffy-css.css
@@ -67,7 +67,8 @@ h1{
     border: 5px solid black;
     background-color: aliceblue;
     filter: drop-shadow(0 0 1rem black);
-    
+    margin-top:50px;
+    margin-bottom: -30px;
     
   
   }
@@ -81,7 +82,8 @@ h1{
 
 
   .copyright {
-    padding: 30px;
+    padding: 4px;
+    height: 40px;
     background: var(--main-color);
     text-align: center;
     color: #201f1f; 
@@ -95,6 +97,7 @@ h1{
     padding: 15px;
     color: #000;
     background-color: #847152;
+    padding:0px;
     }
                                        
     .footer h2 {
