--- a/luffy-css.css
+++ b/luffy-css.css
@@ -148,7 +148,7 @@ circle{
 	width: 100px;
 	height: 100px;
 	background-color: transparent;
-	border-radius: 50%;
+	border-radius: 100%;
 	border: 3px solid black;
 	margin: 10px;
 	overflow: hidden;
@@ -169,13 +169,13 @@ circle{
 }
 
 .circle img {
-	width: 140%;
-	height: 100%;
+	width: 100%;
+	height: 110px;
 	object-fit: cover;
 }
 .circle .circle-image2{
-    width: 185%;
-    height: 180%;
+    width: 150%;
+    height: 110px;
     object-fit: cover;
   
 }
