--- a/luffy-css.css
+++ b/luffy-css.css
@@ -72,9 +72,17 @@ h1{
     
   
   }
+  .row .pi1 .drew2{
+padding-top: 50px;
+
+
+
+  }
 .row .pi1{
   background-color:  #DB2B3F;
   padding: 10px;
+  background-image: url("https://wallpapercave.com/wp/wp4405177.jpg");
+  background-size: 100% 100%;
   
   
 }
