--- a/luffy-css.css
+++ b/luffy-css.css
@@ -81,7 +81,7 @@ padding-top: 50px;
 .row .pi1{
   background-color:  #DB2B3F;
   padding: 10px;
-  background-image: url("https://wallpapercave.com/wp/wp4405177.jpg");
+  background-image: url("665.jpg");
   background-size: 100% 100%;
   
   
