--- a/luffy-css.css
+++ b/luffy-css.css
@@ -84,6 +84,7 @@ height: auto;
   padding: 10px;
   background-image: url("665.jpg");
   background-size: 100% 100%;
+  padding-bottom: 50px;
   
   
 }
