--- a/body.css
+++ b/body.css
@@ -119,6 +119,8 @@ body{
     footer{
         width: 100%;
         height: 100%;
+        margin-top: 0%;
+        padding: 0px 0px;
         background-color: pink;
         background-size: cover;
         border-radius: 1px;
