--- a/body.css
+++ b/body.css
@@ -46,13 +46,14 @@ body{
     }
     .content{
     max-width: 1500px;
-    margin-left: 50px;
+  
     padding: 0 15px;
     
     }
 
     .ame1{
       background-color: rgb(241, 189, 121) ;
+
     }
     .content ol li{
         font-size: 20px;
@@ -118,18 +119,18 @@ body{
 
     footer{
         width: 100%;
-        height: 100%;
-        margin-top: 0%;
-        padding: 0px 0px;
+        height: 300px;
         background-color: pink;
-        background-size: cover;
-        border-radius: 1px;
+        border-radius: 10px;
+        padding-left: 0%;
+        
         }
         
         
         .footerContainer{
           width: 100%;
           padding: -3%;
+
 
           
         }
