--- a/body.css
+++ b/body.css
@@ -1,7 +1,8 @@
 body{
    
-    margin: 0%;
-    padding: 0%;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
     background-color: white;
 }
     header{
@@ -54,6 +55,7 @@ body{
     .ame1{
       background-color: rgb(241, 189, 121) ;
 
+
     }
     .content ol li{
         font-size: 20px;
@@ -76,8 +78,8 @@ body{
     
     ul{
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 0%;
+    margin: 0%;
     }
     a{
     color: #010807;
@@ -119,10 +121,9 @@ body{
 
     footer{
         width: 100%;
-        height: 300px;
+        height: 280px;
         background-color: pink;
         border-radius: 10px;
-        padding-left: 0%;
         
         }
         
@@ -139,13 +140,14 @@ body{
         .socialIcons{
           display: flex;
           justify-content: center;
+          padding-top: 50px;
 
         }
         
         
         .socialIcons a{
           text-decoration: none;
-          padding: 15px;
+          padding: 20px;
           background-color: #ffffff;
           margin: 15px;
           border-radius: 50%;
@@ -170,8 +172,10 @@ body{
         }
         
         .footerBottom{
-          padding: 20px;
+          padding: -5px;
           text-align: center;
+        
+          
         }
         
         
